--- a/Agendamento/src/messages.properties
+++ b/Agendamento/src/messages.properties
@@ -1,6 +1,8 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
+javax.faces.component.UIInput.REQUIRED=Ops, ocorreu um erro aqui!
+
 #Gerais
 voltar=Voltar
 campus=Campus
@@ -8,11 +10,12 @@ salvar=Salvar
 cancelar=Cancelar
 novo=Novo
 home=Home
-suaReservaSucesso="Sua reserva foi realizada com sucesso."
-reservaSucesso="Reserva realizada com sucesso"
-sistemaReservaProjetores="Sistema de reserva de Projetores"
+suaReservaSucesso=Sua reserva foi realizada com sucesso.
+reservaSucesso=Reserva realizada com sucesso
+sistemaReservaProjetores=Sistema de reserva de Projetores
 
 # Form Reserva
+cadReservaProjetor=Reserva de Projetores
 data=Data
 horario=Horário
 
