--- a/Agendamento/src/messages_pt_BR.properties
+++ b/Agendamento/src/messages_pt_BR.properties
@@ -1,7 +1,9 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-javax.faces.component.UIInput.REQUIRED=Ops, ocorreu um erro aqui!
+javax.faces.component.UIInput.REQUIRED="{0}": Campo obrigatório.
+javax.faces.converter.IntegerConverter.INTEGER="{0}": Valor deve ser númerico.
+javax.faces.converter.IntegerConverter.INTEGER_detail="{2}": Valor deve ser númerico.
 
 #Gerais
 voltar=Voltar
