--- a/Agendamento/src/messages.properties
+++ b/Agendamento/src/messages.properties
@@ -15,6 +15,7 @@ home=Home
 suaReservaSucesso=Sua reserva foi realizada com sucesso.
 reservaSucesso=Reserva realizada com sucesso
 sistemaReservaProjetores=Sistema de reserva de Projetores
+login=Login
 
 # Form Reserva
 cadReservaProjetor=Reserva de Projetores
