--- a/Agendamento/src/messages.properties
+++ b/Agendamento/src/messages.properties
@@ -14,6 +14,8 @@ novo=Novo
 home=Home
 suaReservaSucesso=Sua reserva foi realizada com sucesso.
 reservaSucesso=Reserva realizada com sucesso
+suaInstalacaoSucesso=A instalação confirmada.
+instalacaoSucesso=Instalação realizada com sucesso
 sistemaReservaProjetores=Sistema de reserva de Projetores
 login=Login
 
