--- a/Agendamento/src/messages.properties
+++ b/Agendamento/src/messages.properties
@@ -27,6 +27,9 @@ horario=Horário
 #Form Instalação de Projetores
 instalProjetor=Instalação de Projetores
 listarReservas=Listar Reservas
+projetor=Projetor
+selecioneProjetor=Selecione um projetor
+confirmarInstal=Confirmar instalação
 
 # Form Projetor
 cadPatrimonio=Cadastro de Projetores
